--- a/01.HTML/01.Restaurant/_includes/book-table.jade
+++ b/01.HTML/01.Restaurant/_includes/book-table.jade
@@ -1,31 +1,31 @@
 form
     .row.form-group
-        .col-sm-6
+        .col-sm-6.col-xs-6
             .input-group
                 input.form-control(type='text', placeholder='Name')
                 .input-group-addon
                     i.fa.fa-user
-        .col-sm-6
+        .col-sm-6.col-xs-6
             .input-group
                 input.form-control(type='text', placeholder='Phone')
                 .input-group-addon
                     i.fa.fa-phone
-        .col-sm-6
+        .col-sm-6.col-xs-6
             .input-group
                 input.form-control(type='text', placeholder='Email')
                 .input-group-addon
                     i.fa.fa-envelope
-        .col-sm-6
+        .col-sm-6.col-xs-6
             .input-group
                 input.form-control(type='text', placeholder='Number of people')
                 .input-group-addon
                     i.fa.fa-users
-        .col-sm-6
+        .col-sm-6.col-xs-6
             .input-group
                 input.form-control(type='text', placeholder='Date')
                 .input-group-addon
                     i.fa.fa-calendar
-        .col-sm-6
+        .col-sm-6.col-xs-6
             .input-group
                 input.form-control(type='text', placeholder='Time')
                 .input-group-addon
