--- a/01.HTML/01.Restaurant/_includes/coming-soon-1.jade
+++ b/01.HTML/01.Restaurant/_includes/coming-soon-1.jade
@@ -32,7 +32,7 @@ section.coming-soon
                 .coming-soon-event-wrapper.padding-top-100.padding-bottom-100
                     .main-title
                         .bg-image
-                            img(src="assets/images/seafood/shrimp.png", alt="")
+                            img.shrimp(src="assets/images/seafood/shrimp.png", alt="")
                         h2.title upcoming event
                     .main-content
                         .infomation
