--- a/01.HTML/01.Restaurant/_includes/new-of-day.jade
+++ b/01.HTML/01.Restaurant/_includes/new-of-day.jade
@@ -2,11 +2,13 @@ section.new-of-day.padding-top-100.padding-bottom-100
     .container
         .main-title
             .bg-image
-                img(src="assets/images/seafood/cuttle.png", alt="")
+                img.cuttle(src="assets/images/seafood/cuttle.png", alt="")
             h2.title news of the day
         .main-content
             .list-news
                 .item
+                    .images
+                        img(src="assets/images/news/news-1.jpg", alt="")
                     .infomation
                         .blog-detail-content
                             .dates
@@ -39,10 +41,12 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                             a(href="#").name Event
                                         li
                                             a(href="#").name Sea food
-                    .images
-                        img(src="assets/images/news/news-1.jpg", alt="")
+                    //- .images
+                    //-     img(src="assets/images/news/news-1.jpg", alt="")
                     .clearfix
                 .item
+                    .images
+                        img(src="assets/images/news/news-2.jpg", alt="")
                     .infomation
                         .blog-detail-content
                             .dates
@@ -75,10 +79,12 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                             a(href="#").name Event
                                         li
                                             a(href="#").name Sea food
-                    .images
-                        img(src="assets/images/news/news-2.jpg", alt="")
+                    //- .images
+                    //-     img(src="assets/images/news/news-2.jpg", alt="")
                     .clearfix
                 .item
+                    .images
+                        img(src="assets/images/news/news-3.jpg", alt="")
                     .infomation
                         .blog-detail-content
                             .dates
@@ -111,6 +117,6 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                             a(href="#").name Event
                                         li
                                             a(href="#").name Sea food
-                    .images
-                        img(src="assets/images/news/news-3.jpg", alt="")
+                    //- .images
+                    //-     img(src="assets/images/news/news-3.jpg", alt="")
                     .clearfix
