--- a/01.HTML/01.Restaurant/_layout.jade
+++ b/01.HTML/01.Restaurant/_layout.jade
@@ -35,9 +35,11 @@ html(lang="en")
     body
         //BEGIN PAGE LOADER
         .body-wrapper
+            // MENU MOBILE BACKGROUND
+            .wrapper-menu-mobile-background
             // MENU MOBILE
-            //- .wrapper-mobile-nav
-            //-     != partial("_includes/menu-mobile")
+            .wrapper-menu-mobile
+                != partial("_includes/header/menu-mobile")
 
             // WRAPPER CONTENT
             .wrapper-content
