--- a/01.HTML/01.Restaurant/_includes/header/header.jade
+++ b/01.HTML/01.Restaurant/_includes/header/header.jade
@@ -34,12 +34,13 @@
     .header-main
         .container
             .header-main-wrapper
-                .hamburger-menu
-                    .hamburger-menu-wrapper
-                        .icons
+                .hamburger-menu-mobile
+                    i.icons.fa.fa-bars
                 .logo-wrapper
                     a.logo(href="index.html")
                         img(src="assets/images/logo/gamba.png", alt="")
                 nav.navigation
                     != partial("navigation")
+                .button-search-mobile
+                    i.icons.fa.fa-search
                 .clearfix
