--- a/01.HTML/01.Restaurant/_includes/header/navigation.jade
+++ b/01.HTML/01.Restaurant/_includes/header/navigation.jade
@@ -1,6 +1,6 @@
 ul.nav-links.nav.navbar-nav
    li.dropdown(class="#{ current.source == 'index' || current.source == 'homepage-2' || current.source == 'homepage-3' ? 'active' : '' }")
-      a.main-menu(href="index.html")
+      a.main-menu(href="javascript:void(0)")
          span.text Home
       ul.menu-dropdown
          li
@@ -13,13 +13,13 @@ ul.nav-links.nav.navbar-nav
             a.sub-menu(href="homepage-3.html")
                span.text Homepage 03
    li(class="#{ current.source == 'about' ? 'active' : '' }")
-      a.main-menu(href="about.html")
+      a.main-menu(href="javascript:void(0)")
          span.text about
    li(class="#{ current.source == 'Reservation' ? 'active' : '' }")
       a.main-menu(href="reservation.html")
          span.text Reservation
    li.dropdown(class="#{ current.source == 'menu-gird' || current.source == 'menu-gird-2' ? 'active' : '' }")
-      a.main-menu(href="menu-gird.html")
+      a.main-menu(href="javascript:void(0)")
          span.text menu
       ul.menu-dropdown
          li
@@ -29,7 +29,7 @@ ul.nav-links.nav.navbar-nav
             a.sub-menu(href="menu-gird-2.html")
                span.text menu 2
    li.dropdown(class="#{ current.source == 'blog' || current.source == 'blog-detail' ? 'active' : '' }")
-      a.main-menu(href="blog.html")
+      a.main-menu(href="javascript:void(0)")
          span.text blog
       ul.menu-dropdown
          li
