--- a/01.HTML/01.Restaurant/_includes/list-menu/list-menu-1-c.jade
+++ b/01.HTML/01.Restaurant/_includes/list-menu/list-menu-1-c.jade
@@ -1,5 +1,5 @@
 .row
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Jalapeno Mango Salsa
@@ -7,7 +7,7 @@
                     sup $
                     span 68.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name hambuger crawfish
@@ -16,7 +16,7 @@
                     span 32.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
 
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name mexico Mango Salas
@@ -24,7 +24,7 @@
                     sup $
                     span 49.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Chicken Doro Wat
@@ -32,7 +32,7 @@
                     sup $
                     span 54.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Masala Spiced Chickpeas
@@ -40,7 +40,7 @@
                     sup $
                     span 73.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Kung pao pastrami
@@ -48,7 +48,7 @@
                     sup $
                     span 55.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Crab & Tarracon Tart
@@ -56,7 +56,7 @@
                     sup $
                     span 38.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Annalisa Tomato
