--- a/01.HTML/01.Restaurant/_includes/list-menu/list-menu-1.jade
+++ b/01.HTML/01.Restaurant/_includes/list-menu/list-menu-1.jade
@@ -1,5 +1,5 @@
 .row
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Kung pao pastrami
@@ -7,7 +7,7 @@
                     sup $
                     span 55.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name mexico Mango Salas
@@ -15,7 +15,7 @@
                     sup $
                     span 49.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Chicken Doro Wat
@@ -23,7 +23,7 @@
                     sup $
                     span 54.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Masala Spiced Chickpeas
@@ -31,7 +31,7 @@
                     sup $
                     span 73.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Crab & Tarracon Tart
@@ -39,7 +39,7 @@
                     sup $
                     span 38.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Annalisa Tomato
@@ -47,7 +47,7 @@
                     sup $
                     span 38.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name Jalapeno Mango Salsa
@@ -55,7 +55,7 @@
                     sup $
                     span 68.00
             .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse aldea orem do eiusmod tempor.
-    .col-sm-6
+    .col-sm-6.col-xs-6
         .menu-items.style-1
             a.title(href="#")
                 .name hambuger crawfish
