--- a/01.HTML/01.Restaurant/_includes/menu-of-day-2.jade
+++ b/01.HTML/01.Restaurant/_includes/menu-of-day-2.jade
@@ -3,7 +3,7 @@ section.menu-of-day.style-2
         .content-wrapper.padding-top-100.padding-bottom-100
             .main-title
                 .bg-image
-                    img(src="assets/images/seafood/kingcrab.png", alt="")
+                    img.kingcrab(src="assets/images/seafood/kingcrab.png", alt="")
                 h2.title menu of the day
             .main-content
                 ul.tab-menu(role="tablist")
