--- a/01.HTML/01.Restaurant/assets/css/components.less
+++ b/01.HTML/01.Restaurant/assets/css/components.less
@@ -865,6 +865,7 @@
     }
     &.style-1 {
         display: table;
+        width: 100%;
         .left-image, .right-infomation {
             display: table-cell;
         }
@@ -915,6 +916,8 @@
     width: 100%;
     height: 500px;
     position: relative;
+    display: inline-block;
+    width: 100%;
     .title-bg {
         margin: 0;
         font-size: 8rem;
@@ -982,6 +985,12 @@
                 width: 50%;
                 float: left;
                 padding: 0 15px;
+            }
+            .images {
+                float: right;
+                img{ 
+                    width: 100%;
+                }
             }
         }
         .slick-dots {
@@ -1067,11 +1076,12 @@
         padding-left: 30px;
         .title {
             display: block;
-            margin: 6px 0 15px 0;
+            margin: 0 0 5px 0;
             color: @title-color;
             font-size: 2.143rem;
             text-transform: capitalize;
             font-family: 'antoniobold';
+            line-height: 1.2;
             &:hover {
                 color: @main-color;
             }
@@ -1122,7 +1132,7 @@
         .description {
             margin-bottom: 20px;
             .text {
-                margin-bottom: 30px;
+                margin-bottom: 27px;
                 &:last-child {
                     margin-bottom: 0;
                 }
@@ -1582,6 +1592,9 @@
             color: #8d8f93;
             margin-bottom: 20px;
         }
+        .description {
+            margin-bottom: 0;
+        }
     }
     .coming-soon-count {
         margin: 50px -15px 0 -15px;
@@ -1589,18 +1602,19 @@
             display: none;
         }
         .count-wrapper {
-            border: 1px solid #e7e9eb;
+            
             display: inline-block;
-            width: 160px;
+            width: 33.333333%;
             height: 160px;
-            margin: 0 15px;
+            padding: 0 15px;
             text-align: center;
             position: relative;
             float: left;
             .time {
-                line-height: 170px;
+                border: 1px solid #e7e9eb;
                 .count {
                     font-size: 7.143rem;
+                    line-height: 160px;
                     font-family: 'robotoblack';
                     color: #ced0d6;
                 }
@@ -1616,7 +1630,7 @@
                 width: 80px;
                 text-align: center;
                 left: 50%;
-                margin-left: -45px;
+                margin-left: -40px;
             }
         }
     }
